<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_navigation_routs"
        android:icon="@drawable/ic_routs"
        android:enabled="true"
        android:title="@string/bottom_navigation_routs"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_navigation_statistics"
        android:icon="@drawable/ic_statistics"
        android:enabled="true"
        android:title="@string/bottom_navigation_statistics"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_navigation_profile"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/bottom_navigation_profile"
        app:showAsAction="ifRoom"/>
</menu>